correcting issue where user can not add new project to table. Made sure that correct title is showing add/update page

--- a/views/updates.pug
+++ b/views/updates.pug
@@ -5,7 +5,7 @@ html(lang="en")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="/css/style.css")
     body
-        h1 `${title}`
+        h1 #{title}
         .form-wrapper
             form(method="POST")
                 label(for="project_name") Project Name
